# git-codeowners

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: main.rs
