[package]
name = "git-owners"
license = "MIT"
description = "A git subcommand to query and validate CODEOWNERS"
version = "1.0.2"
edition = "2021"
repository = "https://github.com/chrisittner/git-owners"

[dependencies]
codeowners = "0.1.3"
atty = "0.2.14"
clap = { version = "3.1.18", features = ["derive"] }

[dependencies.pyo3]
version = "0.17.3"
features = ["extension-module", "abi3-py38"]