[package]
name = "git-owners"
license = "MIT"
description = "A git subcommand to query and validate CODEOWNERS"
version = "1.1.2"
edition = "2021"
repository = "https://github.com/chrisittner/git-codeowners"

[dependencies]
codeowners = "0.1.3"
atty = "0.2.14"
clap = { version = "4.4.19", features = ["derive"] }
pyo3 = { version = "0.22.2", features = ["extension-module", "abi3-py38"] }
clap-help = "1.3.0"

[[bin]]
name = "git-codeowners"
path = "src/main.rs"

[[bin]]
name = "git-owners"
path = "src/main.rs"
